# Jules-Geant4

./: .gitignore  CMakeLists.txt  Dockerfile  compose.yml  init_vis.mac  microelectronics_sim.cc  packages  readme.md  run_sim.sh  run_simulation.sh  test.sh  test_plan.sh  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  MicroElecPhysics.hh  MicroElecSiPhysics.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
microelectronics_sim/: CMakeLists.txt  Dockerfile  analyze.py  microelectronics_sim.cc  run.mac
microelectronics_sim/include/: PhysicsList.hh  RunAction.hh  SteppingAction.hh
microelectronics_sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/: DetectorConstruction.cc  MicroElecPhysics.cc  MicroElecSiPhysics.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc
